--- a/testeproj/stylestest.css
+++ b/testeproj/stylestest.css
@@ -200,13 +200,13 @@ p {
     padding-top: 200px;
 }
 
-#titulo-entrar {
+#entrar{
     margin: 0 0 70px 0;
     font-family: "Poppins", sans-serif;
     font-size: 200%;
     justify-content: center;
     text-align: center;
-    ;
+    
 }
 
 
